# roboy_generative_nlp

./: .gitignore  CMakeLists.txt  README.md  advertise_gnlp_service  package.xml  requirements.txt  setup  twitter_chat
Datasets/squad/processed/: idx_a.npy  idx_q.npy  metadata.pkl
Datasets/squad/raw/: reader-squad.py  squad.txt
Datasets/twitter/processed/: metadata.pkl
Datasets/wiki_qa/: S10.txt
Seq2Seq/: config.py  seq2seq.py  seq2seq_eval.py  seq2seq_predict.py  seq2seq_train.py
Seq2Seq/data/: data_preprocess.py  data_utils.py
Seq2Seq/lib/: seq2seq.py  seq2seq_model.py  seq2seq_model_utils.py
datasets-cleaned/squad/: squad.txt
generative_nlp/: CMakeLists.txt  CMakeLists.txt~  README.md  README.md~  package.xml  package.xml~  setup.py
generative_nlp/include/Datasets/twitter/processed/: metadata.pkl
generative_nlp/include/Datasets/wiki_qa/raw/: S08.txt  S09.txt
generative_nlp/launch/: test.launch
generative_nlp/scripts/: seq2seq_predict.py  seq2seq_ros.py
generative_nlp/srv/: seq2seq_eval.srv  seq2seq_predict.srv
include/Datasets/squad/processed/: idx_a.npy  metadata.pkl
launch/: test.launch
scripts/: another_websocket.py  gnlp_ros_srv.py  seq2seq.py  seq2seq_eval.py  seq2seq_ros.py  seq2seq_train.py
scripts/lib/: data_utils.py  seq2seq_model.py
squad/: reader-squad.py  squad.txt
